bug 63831, r=ftang@netscape.com, sr=sfraser when measuring space glyph width use  8 bit space char with  8 bit font use 16 bit space char with 16 bit font